@@ -12,7 +12,6 @@ Installation
 
 Requirements:
 - Java 6 or newer (JDK, http://www.oracle.com/technetwork/java/javase/downloads/index.html)
-- java3d (http://www.oracle.com/technetwork/articles/javase/index-jsp-138252.html)
 
 Clone repository and initialize submodules:
 ```
@@ -34,26 +33,33 @@ java -jar out/production/jmavsim.jar
 
 ### Platform-specific
 
-#### Arch Linux
+jMAVSim uses java3d library for visualization. It was discontinued for long time, but now maintained again and works with JOGL backend. All necessary jars with java classes and native binaries (Linux/Mac OS/Windows) included in this repo, no need ti install java3d manually. And need to make sure that java doesn't use any other deprecated version of java3d. For more info related to java3d see this article: https://gouessej.wordpress.com/2012/08/01/java-3d-est-de-retour-java-3d-is-back/
 
-Installing java3d:
-```
-sudo pacman -S jdk7-openjdk
+#### Mac OS
 
-yaourt -S java3d
-cp /jre/lib/ext/j3dcore.jar /home/USERNAME/src/jMAVSim/lib/j3dcore.jar
-cp /jre/lib/amd64/libj3dcore-ogl.so /home/USERNAME/src/jMAVSim/
+On Mac OS java may use deprecated version of java3d as extension, if you get following error:
+```
+JavaVM WARNING: JAWT_GetAWT must be called after loading a JVM
+AWT not found
+Exception in thread "main" java.lang.NoClassDefFoundError: apple/awt/CGraphicsDevice
+	at javax.media.j3d.GraphicsConfigTemplate3D.<clinit>(GraphicsConfigTemplate3D.java:55)
+...
 ```
 
-#### MAC OS
-
-Mac OS app can be created by running:
+Then just add `-Djava.ext.dirs=` option to command line when starting:
 ```
-ant jmavsim_mac_os_app
+java -Djava.ext.dirs= -jar out/production/jmavsim.jar
 ```
-Result will be placed to `out/production`
 
 Developing
 ----------
 
 jMAVSim is not out-of-the-box simulator, but very flexible toolkit, new vehicle types (e.g. non standard multirotors configurations) can be added very easily. (But for fixed wing you will need some more aerodynamics knowledge). Camera can be placed on any point, including gimabal, that can be controlled by autopilot. Multiple systems simulation is possible. Sensors data can be replayed from real flight log.
+
+All simulator configuration hardcoded in file `src/me/drton/jmavsim/Simulator.java`, this file _should_ be edited before running simulator.
+
+Custom vehicle visual models in .obj format can be used.
+
+Custom MAVLink protocols can be used, no any recompilation needed, just specify XML file instead of `custom.xml`.
+
+It's convinient to start simulator from IDE. Free and powerful IntelliJ IDEA IDE recommended, project files for it are already included, just open project file `jMAVSim.ipr` and right-click -> Run `Simulator`.
